<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//Atrium
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;

//Gange
	strEnOceanSwitch_Gang_5_441B                      	: Tc2_EnOcean.STR_EnOceanSwitch;

//Rum
     strEnOceanSwitch_Rum_4_424                      	: Tc2_EnOcean.STR_EnOceanSwitch;
     strEnOceanSwitch_Rum_4_426                      	: Tc2_EnOcean.STR_EnOceanSwitch;
     strEnOceanSwitch_Rum_5_444                      	: Tc2_EnOcean.STR_EnOceanSwitch;
	 strEnOceanSwitch_Rum_5_441A                      : Tc2_EnOcean.STR_EnOceanSwitch;
     
     strEnOceanSwitch_Rum_5_448A                      : Tc2_EnOcean.STR_EnOceanSwitch;
     strEnOceanSwitch_Rum_5_450                      	: Tc2_EnOcean.STR_EnOceanSwitch;	 
     strEnOceanSwitch_Rum_5_452                      	: Tc2_EnOcean.STR_EnOceanSwitch;	 	 
	 strEnOceanSwitch_Rum_5_454                      	: Tc2_EnOcean.STR_EnOceanSwitch;
 	 strEnOceanSwitch_Rum_5_411C                      	: Tc2_EnOcean.STR_EnOceanSwitch;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>