<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_EnOcean" Id="{d2583012-7b8d-42b3-930e-7213eee0e992}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_EnOcean
VAR
	fbKL6581			: FB_KL6581;
	stKL6581_in  AT %I* : KL6581_INPUT;
	stKL6581_out AT %Q*	: KL6581_OUTPUT;
	stKL6581			: STR_KL6581;
	bInitCom			: BOOL := TRUE;
	
	arrEnOcean_Search	: ARRAY [1..8] OF FB_EnOcean_Search;
	nSearchIdx			: BYTE;
	bSerach				: BOOL;
	arrDevices			: ARRAY [1..8] OF INT;
	arrID				: ARRAY [1..8, 0..255] OF DWORD;
	
		//Trykknapper Atrium
	fbAtriumNiveau_Tryk_PladeB				: FB_Rec_RPS_Switch;
	fbAtriumNiveau_Tryk_Sevice				: FB_Rec_RPS_Switch;			

	//Trykknapper på gange

	
	//Trykknapper i rum
	fbRum_4_424_Tryk						: FB_Rec_RPS_Switch;
	fbRum_4_426_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_441A_Tryk						: FB_Rec_RPS_Switch;
	fbGang_5_441B_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_444_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_448A_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_450_Tryk						: FB_Rec_RPS_Switch;	
	fbRum_5_452_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_454_Tryk						: FB_Rec_RPS_Switch;
	fbRum_5_411C_Tryk						: FB_Rec_RPS_Switch;
END_VAR

VAR CONSTANT
	byNode_1: BYTE := 1;
	byNode_2: BYTE := 2;
	byNode_3: BYTE := 3;
	byNode_4: BYTE := 4;
	byNode_5: BYTE := 5;
	byNode_6: BYTE := 6;
	byNode_7: BYTE := 7;
	byNode_8: BYTE := 8;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Kommunikation mit der KL6581. *)
(* Communication with the KL6581. *)
fbKL6581(
	bInit			:= bInitCom,
	nIdx			:= 2,
	stKL6581_in		:= stKL6581_In,
	stKL6581_out	:= stKL6581_Out,
	bReady			=> ,
	bBusy			=> ,
	bError			=> ,
	iErrorID		=> ,
	str_KL6581		=> stKL6581);

GVL_AHDataModbus.EnOceanError	:= TO_UINT(fbKL6581.iErrorID);
(* Warten bis der Kommunikationsbaustein initialisiert wurde.*)
(* Wait until the communication function block has been initialized. *)
IF (NOT fbKL6581.bReady) THEN
	RETURN;
END_IF

FOR nSearchIdx:= 1 TO 8 DO
	arrEnOcean_Search[nSearchIdx](
		bStart:= TRUE, 
		str_KL6581:= stKL6581 , 
		byNode:= nSearchIdx, 
		bReceive=> , 
		iDevices=>arrDevices[nSearchIdx] , 
		ar_ID=> );
		
		MEMCPY(ADR(arrID[nSearchIdx,0]), ADR(arrEnOcean_Search[nSearchIdx].ar_ID), SIZEOF(arrEnOcean_Search[nSearchIdx].ar_ID)); 
END_FOR

//Gange



//RUM
 //
P_Rum_4_424();
P_Rum_4_426();
P_Rum_5_441A();
P_Gang_5_441B();
P_Rum_5_444();
P_Rum_5_448A();
P_Rum_5_450();
P_Rum_5_452();
P_Rum_5_454();
P_Rum_5_411C();
//AtriumNiveau
A_AtriumNiveau();
]]></ST>
    </Implementation>
    <Action Name="A_AtriumNiveau" Id="{5b863a8e-6cff-4511-86bf-f0a83cf94e37}">
      <Implementation>
        <ST><![CDATA[fbAtriumNiveau_Tryk_PladeB(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#0029B92D, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_PladeB,
	by_Node=> , 
	bReceive=> );

//knap 2 
(*
fbAtriumNiveau_Tryk_Sevice(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#00FEE4FE87, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_Service, 
	by_Node=> , 
	bReceive=> );
*)]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Gang_5_441B" Id="{d13229e0-fdde-49dd-9dfa-a57a0af0cf95}">
      <Implementation>
        <ST><![CDATA[fbGang_5_441B_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#002A0890, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Gang_5_441B, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_4_424" Id="{9780653a-cfc6-4a7b-a3da-664bff20558e}">
      <Implementation>
        <ST><![CDATA[fbRum_4_424_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#0029AB88, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_424, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_4_426" Id="{cabea36b-0ddf-456c-ae71-c021159eb829}">
      <Implementation>
        <ST><![CDATA[fbRum_4_426_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=2 , 
	dw_ID:= 16#0029AAD6, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_426, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_411C" Id="{5bc4821b-70ec-4d3b-9528-e1008d948ed9}">
      <Implementation>
        <ST><![CDATA[fbRum_5_411C_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029AD43, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_411C, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_441A" Id="{64607584-fe1d-49ac-a9db-bbecd9cb6efa}">
      <Implementation>
        <ST><![CDATA[fbRum_5_441A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#00290EC2, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_441A, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_444" Id="{dabbf940-feef-4107-9240-5bda20656286}">
      <Implementation>
        <ST><![CDATA[fbRum_5_444_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029B74E, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_444, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_448A" Id="{4f0498fb-4c0e-49f9-8fee-1b2e1006f8c9}">
      <Implementation>
        <ST><![CDATA[fbRum_5_448A_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029AB8B, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_448A, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_450" Id="{46a37377-8c33-48d8-b75b-281731e6f95a}">
      <Implementation>
        <ST><![CDATA[fbRum_5_450_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029ABB9, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_450, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_452" Id="{f1d32277-aefa-4240-b07d-298bdb9f0cce}">
      <Implementation>
        <ST><![CDATA[fbRum_5_452_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029B8D2, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_452, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
    <Action Name="P_Rum_5_454" Id="{2538d29c-9c58-4aab-9b41-90c5560a5c5d}">
      <Implementation>
        <ST><![CDATA[fbRum_5_454_Tryk(
	str_KL6581:=stKL6581 , 
	byNode:=4 , 
	dw_ID:=  16#0029B75D, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_5_454, 
	by_Node=> , 
	bReceive=> );
]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>